# ai-agent-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 006bb97eb402_initial_schema.py  18dc41cd0a7a_add_composite_index_on_chat_sessions_.py  256c8a7eedb6_initial_schema.py  63560b63c84e_initial_schema.py  92093dd8c753_initial_schema_migration.py  b170e31f79ea_initial_schema.py  d07766a6c84d_initial_schema.py  e5fe876a785c_initial_schema.py
app/: main.py
app/controllers/: agent.py  chat_session.py  message.py  router.py  voice.py
app/core/: app.py  config.py  constants.py  database.py  dependencies.py  errors.py  logger.py  logging_middleware.py  openai.py  validators.py
app/models/: __init__.py  agent.py  audio_file.py  chat_session.py  message.py
app/repositories/: agent.py  audio_file.py  base.py  chat_session.py  message.py
app/schemas/: agent.py  audio_file.py  chat_session.py  error.py  message.py  pagination.py
app/services/: agent.py  chat_session.py  message.py  voice.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ConfirmDialog.tsx  Layout.tsx  MessageInput.tsx  MessageList.tsx  Modal.tsx  SessionBar.tsx  Sidebar.tsx
frontend/src/context/: AppContext.tsx
frontend/src/types/: index.ts
tests/: conftest.py  test_agents.py  test_health.py  test_messages.py  test_sessions.py  test_voice.py
