[project]
name = "ai-agent-platform"
version = "0.1.0"
description = "AI agent chat platform with voice (STT/TTS) — FastAPI + async SQLAlchemy + SQLite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "fastapi[standard]>=0.138.0",
    "openai>=2.44.0",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.19",
    "ty>=0.0.54",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "PTH", "PL"]
ignore = ["PTH123"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.fastapi]
entrypoint = "app.main:app"
